--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,3 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-cayman-blog
 title: Louis 'Darkchaos' James
 description: My username isn't as edgy as it looks, trust me!
-
-# remote_theme: daattali/beautiful-jekyll@4.0.1
-plugins:
-  # - jekyll-remote-theme
