Fix Git Pages error

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman-blog
+theme: jekyll-theme-cayman
 title: Louis 'Darkchaos' James
 description: My username isn't as edgy as it looks, trust me!
