--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-# theme: jekyll-theme-cayman
-remote_theme: lorepirri/cayman-blog
+theme: jekyll-theme-cayman
 title: Louis 'Darkchaos' James
 description: My username isn't as edgy as it looks, trust me!
